--- a/frontend/src/components/common/Header/header.css
+++ b/frontend/src/components/common/Header/header.css
@@ -14,7 +14,8 @@
           align-items: center;
   height: 80px;
   padding: 0;
-  margin: 10px 30px;
+  margin: 0px 30px;
+  z-index: 3;
 }
 
 .header-container__nav {
