--- a/frontend/src/components/common/Header/header.scss
+++ b/frontend/src/components/common/Header/header.scss
@@ -5,7 +5,8 @@
     @include flex-content(flex, row, space-between, center);
     height: 80px;
     padding: 0;
-    margin: 10px 30px;
+    margin: 0px 30px;
+    z-index: 3;
     &__nav {
         width: 75px;
         position: relative;
