--- a/frontend/src/components/Login/login.scss
+++ b/frontend/src/components/Login/login.scss
@@ -58,8 +58,9 @@
     content: ' ';
     z-index: 1;
     position: absolute;
-    background-color: $color-sepia;
+    background-color: $color-dark;
     opacity: 50%;
     width: 100vw;
     height: calc(100vh - 80px);
+    backdrop-filter: blur(2px);
 }
