--- a/frontend/src/components/cameras/CamerasList/index.scss
+++ b/frontend/src/components/cameras/CamerasList/index.scss
@@ -1,3 +1,5 @@
+@import './../../../style/color';
+
 .cameras {
     display: flex;
     flex-direction: row;
@@ -5,9 +7,34 @@
     list-style: none;
     flex-wrap: wrap;
     padding: 0;
+    margin: 0 5px;
+    padding-top: 5px;
+    border-top: 2px solid $color-corporative;
     &__item{
-        img{
-            width: 150px;
+        position: relative;
+        margin:5px;
+        .item-image{
+            width: 190px;
+            height: 200px;
+            overflow: hidden;
+            border-radius: 20px;
+            img{
+                height: 180px;
+                float: right;
+            }
+        }
+        .item-info{
+            position: absolute;
+            width: 100%;
+            height: 20%;
+            background-color: $color-corporative;
+            border-radius: 0 0 20px 20px;  
+            bottom: 0;  
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            padding: 5px 15px;
+            color: white;
         }
     }
 }
