--- a/frontend/src/components/common/Header/header.scss
+++ b/frontend/src/components/common/Header/header.scss
@@ -1,12 +1,19 @@
 @import './../../../style/color';
 @import './../../../style/mixin';
 
+.header{
+    position:sticky;
+    top: 0;
+    z-index: 3;
+    background-color: $color-white;
+}
+
 .header-container {
     @include flex-content(flex, row, space-between, center);
     height: 80px;
     padding: 0;
     margin: 0px 30px;
-    z-index: 3;
+    
     &__nav {
         width: 75px;
         position: relative;
@@ -51,8 +58,14 @@
             img{
                 width: 35px;
             }
+            .cart-number{
+                position: absolute;
+                top: -9px;
+                left: 29px;
+                z-index: 2;
+            }
         }
-        .header-cart::before {
+        .cart-circle {
             content: ' ';
             width: 25px;
             height: 25px;
