--- a/frontend/src/components/cameras/CamerasList/index.scss
+++ b/frontend/src/components/cameras/CamerasList/index.scss
@@ -36,5 +36,18 @@
             padding: 5px 15px;
             color: white;
         }
+        .favorite-button{
+            position: absolute;
+            width: 20px;
+            height: 20px;
+            top: 10px;
+            right: 10px;
+            background-color: transparent;
+            border: none;
+            outline: none;
+            img{
+                width: 20px;
+            }
+        }
     }
 }
