--- a/frontend/src/components/cameras/CamerasList/index.scss
+++ b/frontend/src/components/cameras/CamerasList/index.scss
@@ -1,13 +1,18 @@
 @import './../../../style/color';
 
+.cameras-container{
+display: flex;
+justify-content: center;
+}
+
 .cameras {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    align-items: flex-start;
     list-style: none;
     flex-wrap: wrap;
     padding: 0;
-    margin: 0 5px;
+    margin: 0 7px;
     padding-top: 5px;
     border-top: 2px solid $color-corporative;
     &__item{
