--- a/frontend/src/components/cameras/CameraDetail/cameraDetail.scss
+++ b/frontend/src/components/cameras/CameraDetail/cameraDetail.scss
@@ -135,3 +135,17 @@ margin-bottom: 30px;
         background-color: $color-dark;
     }
 }
+
+.favorite-button{
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    top: 20px;
+    right: 20px;
+    background-color: transparent;
+    border: none;
+    outline: none;
+    img{
+        width: 30px;
+    }
+}
