--- a/frontend/src/components/cameras/CamerasList/index.scss
+++ b/frontend/src/components/cameras/CamerasList/index.scss
@@ -18,6 +18,15 @@ justify-content: center;
     &__item{
         position: relative;
         margin:5px;
+        .sold-label{
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background-color: black;
+            opacity: 0.5;
+            z-index:1;
+            border-radius: 20px;
+        }
         .item-image{
             width: 190px;
             height: 200px;
