Add own style for h1 margin on sections

--- a/frontend/src/components/Dashboard/dashboard.scss
+++ b/frontend/src/components/Dashboard/dashboard.scss
@@ -1,5 +1,9 @@
 @import './../../style/color';
 
+.section-title{
+    margin-left: 30px;
+}
+
 .section-list{
     border-top: 2px solid $color-corporative;
     margin: 0 10px;
