--- a/frontend/src/components/Cart/cart.scss
+++ b/frontend/src/components/Cart/cart.scss
@@ -1,8 +1,12 @@
 @import './../../style/color';
 
+.section-title{
+    margin-left: 30px;
+}
+
 .shopping-cart{
     width: calc(100vw - 20px);
-    margin: 10px;
+    margin: 0 10px;
     display: flex;
     flex-direction: column;
     border-top: 2px solid $color-corporative;
