--- a/frontend/src/components/Products/ProductsList/index.scss
+++ b/frontend/src/components/Products/ProductsList/index.scss
@@ -5,6 +5,10 @@ display: flex;
 justify-content: center;
 }
 
+.section-title{
+    margin-left: 30px;
+}
+
 .cameras {
     display: flex;
     flex-direction: row;
