--- a/frontend/src/components/Cart/cart.scss
+++ b/frontend/src/components/Cart/cart.scss
@@ -31,6 +31,7 @@
     &__product-list{
         list-style: none;
         margin:0;
+        padding: 0 3px;
     }
     &__price{
         font-size: 20px;
