--- a/frontend/src/components/common/Header/header.scss
+++ b/frontend/src/components/common/Header/header.scss
@@ -37,6 +37,7 @@
                 width: 100%;
                 padding: 20px 0;
                 border-bottom: 1px solid $color-white;
+                font-size: 18px;
             }
         }
         .block {
