--- a/frontend/src/components/common/Header/header.scss
+++ b/frontend/src/components/common/Header/header.scss
@@ -9,7 +9,7 @@
 }
 
 .header-container {
-    @include flex-content(flex, row, space-between, center);
+    @include flex-content(none, row, space-between, center);
     height: 80px;
     padding: 0;
     margin: 0px 30px;
@@ -94,3 +94,87 @@
         }
     }
 }
+
+.header-container-max{
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    padding: 10px 20px ;
+    position: sticky;
+    background-color: $color-corporative;
+    margin-bottom: 20px;
+    &__logo{
+        img{
+            width: 150px;
+        }
+    }
+    &__nav {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        .nav-left{
+            display: flex;
+            flex-direction: row;
+            .section-item{
+                margin: 0 20px;
+                text-transform: uppercase;
+                font-size: 22px;
+                font-weight: 400;
+            }
+            .section-item:hover{
+                a{
+
+                    color: $color-dark;
+                }
+            }
+        }
+        .nav-right{
+            display: flex;
+            flex-direction: row;
+            width: 120px;
+            justify-content: space-between;
+            padding-right: 20px;
+            .nav-right-cart{
+                width:40px;
+                position: relative;
+                .cart-circle {
+                    content: ' ';
+                    width: 25px;
+                    height: 25px;
+                    background-color: $color-white;
+                    border-radius: 50%;
+                    position: absolute;
+                    left: 20px;
+                    bottom: 26px;
+                }
+                .cart-number{
+                    position: absolute;
+                    top: -11px;
+                    left: 29px;
+                    z-index: 2;
+                    color:$color-dark;
+                }
+
+            }
+            .nav-right-user{
+                width:30px;
+            }
+        }
+    }
+}
+
+@media (min-width: 700px) {
+    .header-container-max{
+        display: flex;
+    }
+    
+  }
+
+  @media (max-width: 700px) {
+        .header-container{
+          display: flex;
+      }  
+  }
