--- a/frontend/src/components/Products/ProductsList/index.scss
+++ b/frontend/src/components/Products/ProductsList/index.scss
@@ -37,7 +37,7 @@ justify-content: center;
             overflow: hidden;
             border-radius: 20px;
             img{
-                height: 180px;
+                height: 100%;
                 float: right;
             }
         }
